--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "csv-to-prismadb",
+  "name": "text2img",
   "version": "0.0.1",
   "description": "Convert your csv to a prisma schema ",
   "main": "dist/index.js",
-  "type": "module",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -13,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/Pratyush-Udhani/csv-to-prismadb.git"
+    "url": "git+ssh://git@github.com:segmind/segmind-npm.git"
   },
   "keywords": [
     "prisma",
@@ -22,9 +21,9 @@
   "author": "Pratyush Udhani",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Pratyush-Udhani/csv-to-prismadb/issues"
+    "url": "https://github.com/segmind/segmind-npm"
   },
-  "homepage": "https://github.com/Pratyush-Udhani/csv-to-prismadb#readme",
+  "homepage": "https://github.com/segmind/segmind-npm#readme",
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
     "@types/node": "^20.5.2",
