--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:segmind/segmind-npm.git"
+    "url": "https://github.com/segmind/segmind-npm"
   },
   "keywords": [
     "text-to-image",
