updated git links

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/segmind/segmind-npm"
+    "url": "git+ssh://git@github.com/segmind/segmind-npm"
   },
   "keywords": [
     "text-to-image",
@@ -21,9 +21,9 @@
   "author": "Pratyush Udhani",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/segmind/segmind-npm"
+    "url": "git+ssh://git@github.com/segmind/segmind-npm"
   },
-  "homepage": "https://github.com/segmind/segmind-npm#readme",
+  "homepage": "git+ssh://git@github.com/segmind/segmind-npm#readme",
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
     "@types/node": "^20.5.2",
