--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "segmind-npm",
-  "version": "0.0.3-beta",
+  "version": "0.1.0",
   "description": "Generate image from text",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
